Add paginator support for partner pages with proper routing
- Add show_separator logic to EventListComponent (uses show_breadcrumb flag)
- Fix paginator actions section for non-breadcrumb pages (filter form structure)
- Add underline styles to paginator actions matching breadcrumb styles
- Pass path, pointer, and sort to EventListComponent on partner pages
- Partner paginator now routes to /partners/:slug/events/:year/:month/:day
- Fix find_next_7_days scope usage in application_controller
- Add turbo_frame: '_top' to event/partner links to break out of frame

--- a/app/assets/stylesheets/components/paginator_component.scss
+++ b/app/assets/stylesheets/components/paginator_component.scss
@@ -98,4 +98,48 @@
 		width: 0.5277777rem;
 		height: 1.05555556rem;
 	}
+
+	// Actions bar (shown when breadcrumb is hidden)
+	&__actions {
+		display: flex;
+		gap: 1rem;
+		align-items: center;
+		justify-content: flex-end;
+		font-size: $small-font-size;
+		padding-top: 0.25rem;
+		margin-bottom: 0.5rem;
+
+		a {
+			border-bottom-style: solid;
+			border-bottom-color: $base-rules-dark;
+			border-bottom-width: 2px;
+			text-decoration: none;
+		}
+
+		.filters__toggle a {
+			border-bottom-color: transparent;
+		}
+
+		.filters__link {
+			border-bottom-style: solid;
+			border-bottom-color: $base-rules-dark;
+			border-bottom-width: 2px;
+		}
+
+		.breadcrumb__today {
+			border-bottom-style: solid;
+			border-bottom-color: $base-rules-dark;
+			border-bottom-width: 2px;
+		}
+
+		.breadcrumb__date-picker-toggle {
+			border-bottom-color: transparent !important;
+		}
+
+		.breadcrumb__date-picker-label {
+			border-bottom-style: solid;
+			border-bottom-color: $base-rules-dark;
+			border-bottom-width: 2px;
+		}
+	}
 }
