--- a/app/components/event_list_component.html.erb
+++ b/app/components/event_list_component.html.erb
@@ -9,6 +9,9 @@
       show_breadcrumb: show_breadcrumb,
       site_name: site_name
     )) %>
+    <% if show_breadcrumb %>
+      <hr>
+    <% end %>
   <% end %>
   <% if events.any? %>
     <% events.each do |day, day_events| %>
