--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -36,6 +36,7 @@
     primary_neighbourhood: @primary_neighbourhood,
     show_neighbourhoods: @current_site.show_neighbourhoods?,
     badge_zoom_level: @current_site.badge_zoom_level,
-    site_tagline: @site.tagline
+    site_tagline: @site.tagline,
+    show_breadcrumb: false
   )) %>
 </div>
