--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -106,10 +106,14 @@
       <%= render(EventListComponent.new(
         events: @events,
         period: @period,
+        pointer: @current_day,
+        sort: @sort,
+        path: "partners/#{@partner.slug}/events",
         primary_neighbourhood: @primary_neighbourhood,
         show_neighbourhoods: @current_site.show_neighbourhoods?,
         badge_zoom_level: @current_site.badge_zoom_level,
-        site_tagline: @site.tagline
+        site_tagline: @site.tagline,
+        show_breadcrumb: false
       )) %>
     <% else %>
       <p><em><%= @no_event_message %></em></p>
