--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,19 +5,42 @@
 <%= render(HeroComponent.new("Events & activities", @site.tagline)) %>
 
 <div class="c c--lg-space-after">
-<%= render(EventListComponent.new(
-    events: @events,
-    pointer: @current_day,
-    period: @period,
-    sort: @sort,
-    repeating: @repeating,
-    site_name: @site.name,
-    primary_neighbourhood: @primary_neighbourhood,
-    show_neighbourhoods: @current_site.show_neighbourhoods?,
-    badge_zoom_level: @current_site.badge_zoom_level,
-    next_date: @next,
-    site_tagline: @site.tagline
-  )) %>
+  <%= turbo_frame_tag "events-browser", data: { turbo_action: "advance" } do %>
+    <div class="paginator" id="paginator">
+      <div class="paginator__context">
+        <%= render(BreadcrumbComponent.new(trail: [['Events', events_path]], site_name: @site.name)) do %>
+          <div class="breadcrumb__actions">
+            <% today = Time.zone.today %>
+            <%= render(EventFilterComponent.new(
+              pointer: @current_day,
+              period: @period,
+              sort: @sort,
+              repeating: @repeating,
+              today_url: "/events/#{today.year}/#{today.month}/#{today.day}?period=#{@period}&sort=#{@sort}&repeating=#{@repeating}#paginator",
+              today: @current_day == today
+            )) %>
+          </div>
+        <% end %>
+      </div>
+      <%= render(TimelineComponent.new(
+        pointer: @current_day,
+        period: @period,
+        sort: @sort,
+        repeating: @repeating,
+        path: 'events'
+      )) %>
+    </div>
+    <hr>
+    <%= render(EventListComponent.new(
+      events: @events,
+      period: @period,
+      primary_neighbourhood: @primary_neighbourhood,
+      show_neighbourhoods: @current_site.show_neighbourhoods?,
+      badge_zoom_level: @current_site.badge_zoom_level,
+      next_date: @next,
+      site_tagline: @site.tagline
+    )) %>
+  <% end %>
 </div>
 
 <%= render(Meta.new('/hello/world')) do |component| %>
