--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -102,21 +102,40 @@
 
     <hr>
 
-    <% if @events.any? %>
-      <%= render(EventListComponent.new(
-        events: @events,
-        period: @period,
-        pointer: @current_day,
-        sort: @sort,
-        path: "partners/#{@partner.slug}/events",
-        primary_neighbourhood: @primary_neighbourhood,
-        show_neighbourhoods: @current_site.show_neighbourhoods?,
-        badge_zoom_level: @current_site.badge_zoom_level,
-        site_tagline: @site.tagline,
-        show_breadcrumb: false
-      )) %>
-    <% else %>
-      <p><em><%= @no_event_message %></em></p>
+    <%= turbo_frame_tag "events-browser", data: { turbo_action: "advance" } do %>
+      <% if @events.any? %>
+        <% path = "partners/#{@partner.slug}/events" %>
+        <% today = Time.zone.today %>
+        <div class="paginator" id="paginator">
+          <%= render(TimelineComponent.new(
+            pointer: @current_day,
+            period: @period,
+            sort: @sort,
+            repeating: @repeating,
+            path: path
+          )) %>
+          <div class="paginator__actions">
+            <%= render(EventFilterComponent.new(
+              pointer: @current_day,
+              period: @period,
+              sort: @sort,
+              repeating: @repeating,
+              today_url: "/#{path}/#{today.year}/#{today.month}/#{today.day}?period=#{@period}&sort=#{@sort}&repeating=#{@repeating}#paginator",
+              today: @current_day == today
+            )) %>
+          </div>
+        </div>
+        <%= render(EventListComponent.new(
+          events: @events,
+          period: @period,
+          primary_neighbourhood: @primary_neighbourhood,
+          show_neighbourhoods: @current_site.show_neighbourhoods?,
+          badge_zoom_level: @current_site.badge_zoom_level,
+          site_tagline: @site.tagline
+        )) %>
+      <% else %>
+        <p><em><%= @no_event_message %></em></p>
+      <% end %>
     <% end %>
   </div>
 </div>
