Simplify date picker to use native HTML date input
- Replace dropdown toggle with direct native date input
- Simplify date_picker_controller.js to use Stimulus targets
- Remove unused dropdown CSS, add new event-filters styles
- Cleaner UX: date picker is always visible and triggers on change

--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -80,44 +80,26 @@
 		border-bottom-color: $base-rules-dark;
 		border-bottom-width: 2px;
 	}
+}
 
-	&__date-picker {
-		position: relative;
-		z-index: 10; // Ensure date picker dropdown appears above paginator buttons
-		display: flex;
-		gap: 0.75rem;
-		align-items: center;
+.event-filters {
+	display: flex;
+	gap: 0.75rem;
+	align-items: center;
 
-		&-toggle {
-			border-bottom-color: transparent !important;
-		}
+	&__today {
+		font-size: $small-font-size;
+		border-bottom-style: solid;
+		border-bottom-color: $base-rules-dark;
+		border-bottom-width: 2px;
+		text-decoration: none;
+	}
 
-		&-label {
-			border-bottom-style: solid;
-			border-bottom-color: $base-rules-dark;
-			border-bottom-width: 2px;
-		}
-
-		&-dropdown {
-			background-color: $base-background;
-			box-shadow: 7px 7px 20px 0px rgba(153, 134, 117, 0.83);
-			padding: 0.8rem;
-			position: absolute;
-			top: 2rem;
-			right: 0;
-			z-index: 500;
-
-			&--hidden {
-				display: none;
-			}
-
-			input[type="date"] {
-				font-family: $sans-serif;
-				font-size: $small-font-size;
-				padding: 0.25rem 0.5rem;
-				border: 2px solid $base-rules-dark;
-				border-radius: 3px;
-			}
-		}
+	&__date {
+		font-family: $sans-serif;
+		font-size: $small-font-size;
+		padding: 0.25rem 0.5rem;
+		border: 2px solid $base-rules-dark;
+		border-radius: 3px;
 	}
 }
