--- a/app/components/event_filter_component.html.erb
+++ b/app/components/event_filter_component.html.erb
@@ -1,20 +1,13 @@
-<div class="breadcrumb__date-picker" data-controller="date-picker">
+<div class="event-filters" data-controller="date-picker">
   <% unless today? %>
-    <%= link_to 'Today', today_url, class: 'breadcrumb__today', data: { turbo_frame: 'events-browser', turbo_action: 'advance' } %>
+    <%= link_to 'Today', today_url, class: 'event-filters__today', data: { turbo_frame: 'events-browser', turbo_action: 'advance' } %>
   <% end %>
-  <a href="#" data-turbo="false" data-action="click->date-picker#toggle" class="breadcrumb__date-picker-toggle">
-    <span class="icon icon--arrow-down">↓</span> <span class="breadcrumb__date-picker-label">Go to date</span>
-  </a>
-  <div class="breadcrumb__date-picker-dropdown breadcrumb__date-picker-dropdown--hidden" data-date-picker-target="dropdown">
-    <%= form_tag('', method: :get, class: 'date-picker__form', data: { turbo_frame: 'events-browser', turbo_action: 'advance', action: 'change->date-picker#submit' }) do %>
-      <%= date_field_tag :date, pointer, data: { date_picker_target: 'input' } %>
-      <%= hidden_field_tag :period, period %>
-      <%= hidden_field_tag :sort, sort %>
-      <%= hidden_field_tag :repeating, repeating %>
-    <% end %>
-  </div>
+  <%= date_field_tag :date, pointer, class: 'event-filters__date', data: { date_picker_target: 'input', action: 'change->date-picker#submit' } %>
+  <%= hidden_field_tag :period, period, data: { date_picker_target: 'period' } %>
+  <%= hidden_field_tag :sort, sort, data: { date_picker_target: 'sort' } %>
+  <%= hidden_field_tag :repeating, repeating, data: { date_picker_target: 'repeating' } %>
 </div>
-<div class="breadcrumb__filters filters" data-controller="filters">
+<div class="filters" data-controller="filters">
   <%= form_tag('', method: :get, class: 'filters__form', enforce_utf8: false, data: { turbo_frame: 'events-browser', turbo_action: 'advance', filters_target: 'form', action: 'change->filters#submit' }) do %>
     <div class="filters__toggle">
       <a href="#" data-turbo="false" data-action="click->filters#toggle"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Filter and sort</span></a>
