--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -87,7 +87,8 @@
 	gap: 0.75rem;
 	align-items: center;
 
-	&__today {
+	&__today,
+	&__go-to-date {
 		font-size: $small-font-size;
 		border-bottom-style: solid;
 		border-bottom-color: $base-rules-dark;
@@ -95,11 +96,12 @@
 		text-decoration: none;
 	}
 
-	&__date {
-		font-family: $sans-serif;
-		font-size: $small-font-size;
-		padding: 0.25rem 0.5rem;
-		border: 2px solid $base-rules-dark;
-		border-radius: 3px;
+	&__date-input {
+		// Hide the input but keep it in the DOM for showPicker()
+		position: absolute;
+		opacity: 0;
+		width: 0;
+		height: 0;
+		pointer-events: none;
 	}
 }
