Fix date picker underline styling to match original pattern
- Only underline the 'Go to date' text, not the arrow icon
- Match the pattern used by 'Filter and sort' toggle

--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -87,13 +87,22 @@
 	gap: 0.75rem;
 	align-items: center;
 
-	&__today,
-	&__go-to-date {
-		font-size: $small-font-size;
+	&__today {
 		border-bottom-style: solid;
 		border-bottom-color: $base-rules-dark;
 		border-bottom-width: 2px;
 		text-decoration: none;
+	}
+
+	&__go-to-date {
+		border-bottom-color: transparent;
+		text-decoration: none;
+	}
+
+	&__go-to-date-label {
+		border-bottom-style: solid;
+		border-bottom-color: $base-rules-dark;
+		border-bottom-width: 2px;
 	}
 
 	&__date-input {
