Fix event-filters styling to inherit from breadcrumb
- Today link inherits underline from .breadcrumb a
- Go to date link has transparent border, only label text is underlined

--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -88,15 +88,11 @@
 	align-items: center;
 
 	&__today {
-		border-bottom-style: solid;
-		border-bottom-color: $base-rules-dark;
-		border-bottom-width: 2px;
-		text-decoration: none;
+		// Inherits border-bottom from .breadcrumb a
 	}
 
 	&__go-to-date {
 		border-bottom-color: transparent;
-		text-decoration: none;
 	}
 
 	&__go-to-date-label {
