--- a/app/components/event_filter_component.html.erb
+++ b/app/components/event_filter_component.html.erb
@@ -1,9 +1,9 @@
-<div class="event-filters" data-controller="date-picker">
+<div class="filters__toggle" data-controller="date-picker">
   <% unless today? %>
-    <%= link_to 'Today', today_url, class: 'event-filters__today', data: { turbo_frame: 'events-browser', turbo_action: 'advance' } %>
+    <%= link_to 'Today', today_url, data: { turbo_frame: 'events-browser', turbo_action: 'advance' } %>
   <% end %>
-  <a href="#" class="event-filters__go-to-date" data-action="click->date-picker#open"><span class="icon icon--arrow-down">↓</span> <span class="event-filters__go-to-date-label">Go to date</span></a>
-  <%= date_field_tag :date, pointer, class: 'event-filters__date-input', data: { date_picker_target: 'input', action: 'change->date-picker#submit' } %>
+  <a href="#" data-turbo="false" data-action="click->date-picker#open"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Go to date</span></a>
+  <%= date_field_tag :date, pointer, class: 'filters__date-input', data: { date_picker_target: 'input', action: 'change->date-picker#submit' } %>
   <%= hidden_field_tag :period, period, data: { date_picker_target: 'period' } %>
   <%= hidden_field_tag :sort, sort, data: { date_picker_target: 'sort' } %>
   <%= hidden_field_tag :repeating, repeating, data: { date_picker_target: 'repeating' } %>
