Add right margin and underline to Today link

--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -30,6 +30,10 @@
 			border-bottom-style: solid;
 			border-bottom-color: $base-rules-dark;
 			border-bottom-width: 2px;
+
+			&--today {
+				margin-right: 0.5rem;
+			}
 		}
 	}
 
