Extract turbo loading styles into separate partial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,6 +53,7 @@
 @import "components/opening_times";
 @import "components/partner_preview_component.scss";
 @import "components/partnership_card_component";
+@import "components/turbo_loading";
 @import "components/pull_quote_component";
 @import "components/resource_not_found";
 @import "components/steps_component";
