Use buttons for event filters to match partner filter styling

--- a/app/assets/stylesheets/components/filters.scss
+++ b/app/assets/stylesheets/components/filters.scss
@@ -8,16 +8,13 @@
 	&__toggle {
 		a {
 			text-decoration: none;
-
-			.filters__link {
-				border-bottom: none;
-			}
 		}
 
 		button {
 			border: none;
 			background: none;
 			font-family: $sans-serif;
+			cursor: pointer;
 		}
 	}
 
