--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -38,7 +38,8 @@
       show_neighbourhoods: @current_site.show_neighbourhoods?,
       badge_zoom_level: @current_site.badge_zoom_level,
       next_date: @next,
-      site_tagline: @site.tagline
+      site_tagline: @site.tagline,
+      truncated: @truncated
     )) %>
   <% end %>
 </div>
