--- a/app/assets/stylesheets/components/paginator_component.scss
+++ b/app/assets/stylesheets/components/paginator_component.scss
@@ -66,7 +66,11 @@
 		border-width: 0;
 
 		a {
-			padding-top: 0.55rem;
+			padding: 0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 100%;
 		}
 
 		&:hover {
@@ -75,7 +79,7 @@
 		}
 
 		&--back a {
-			padding-right: 0.2rem;
+			padding-right: 0.15rem;
 		}
 
 		&--forwards {
@@ -86,7 +90,7 @@
 			top: 0;
 
 			a {
-				padding-left: 0.2rem;
+				padding-left: 0.15rem;
 			}
 		}
 	}
