--- a/app/assets/stylesheets/base/icon-font.scss
+++ b/app/assets/stylesheets/base/icon-font.scss
@@ -1,7 +1,8 @@
 @font-face {
 	font-family: "placecal-icons";
 	src: url("fontello/font/placecal-icons.eot?12555807");
-	src: url("fontello/font/placecal-icons.eot?12555807#iefix")
+	src:
+		url("fontello/font/placecal-icons.eot?12555807#iefix")
 			format("embedded-opentype"),
 		url("fontello/font/placecal-icons.woff2?12555807") format("woff2"),
 		url("fontello/font/placecal-icons.woff?12555807") format("woff"),
