--- a/app/assets/stylesheets/home/_card.scss
+++ b/app/assets/stylesheets/home/_card.scss
@@ -48,11 +48,16 @@
 
 		@include for-phone-only {
 			.card__title {
-				background-image: image-url("home/site_title/mobile_top.svg"),
+				background-image:
+					image-url("home/site_title/mobile_top.svg"),
 					image-url("home/site_title/mobile_bottom.svg");
 				background-repeat: no-repeat;
-				background-position: 50% 0, 50% 100%;
-				background-size: 241px 48px, 261px 98px;
+				background-position:
+					50% 0,
+					50% 100%;
+				background-size:
+					241px 48px,
+					261px 98px;
 
 				// To add space around the background images
 				border-width: 1rem 0;
@@ -66,10 +71,13 @@
 		}
 
 		@include for-tablet-portrait-up {
-			background-image: image-url("home/site_title/portrait_left.svg"),
+			background-image:
+				image-url("home/site_title/portrait_left.svg"),
 				image-url("home/site_title/portrait_right.svg");
 			background-repeat: no-repeat;
-			background-position: 0 50%, 100% 50%;
+			background-position:
+				0 50%,
+				100% 50%;
 			background-size: auto 100%;
 			border-width: 1rem;
 			border-style: solid;
@@ -91,7 +99,8 @@
 		}
 
 		@include for-tablet-landscape-up {
-			background-image: image-url("home/site_title/landscape_left.svg"),
+			background-image:
+				image-url("home/site_title/landscape_left.svg"),
 				image-url("home/site_title/landscape_right.svg");
 			min-height: 409px;
 
@@ -101,7 +110,8 @@
 		}
 
 		@include for-desktop-up {
-			background-image: image-url("home/site_title/desktop_left.svg"),
+			background-image:
+				image-url("home/site_title/desktop_left.svg"),
 				image-url("home/site_title/desktop_right.svg");
 			min-height: 477 px;
 
