--- a/app/assets/stylesheets/variables/fonts.scss
+++ b/app/assets/stylesheets/variables/fonts.scss
@@ -4,7 +4,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-100.eot");
-	src: url("rawline/rawline-100.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-100.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-100.woff2") format("woff2"),
 		url("rawline/rawline-100.woff") format("woff"),
 		url("rawline/rawline-100.ttf") format("truetype"),
@@ -16,7 +17,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-100i.eot");
-	src: url("rawline/rawline-100i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-100i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-100i.woff2") format("woff2"),
 		url("rawline/rawline-100i.woff") format("woff"),
 		url("rawline/rawline-100i.ttf") format("truetype"),
@@ -28,7 +30,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-200.eot");
-	src: url("rawline/rawline-200.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-200.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-200.woff2") format("woff2"),
 		url("rawline/rawline-200.woff") format("woff"),
 		url("rawline/rawline-200.ttf") format("truetype"),
@@ -40,7 +43,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-200i.eot");
-	src: url("rawline/rawline-200i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-200i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-200i.woff2") format("woff2"),
 		url("rawline/rawline-200i.woff") format("woff"),
 		url("rawline/rawline-200i.ttf") format("truetype"),
@@ -52,7 +56,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-300.eot");
-	src: url("rawline/rawline-300.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-300.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-300.woff2") format("woff2"),
 		url("rawline/rawline-300.woff") format("woff"),
 		url("rawline/rawline-300.ttf") format("truetype"),
@@ -64,7 +69,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-300i.eot");
-	src: url("rawline/rawline-300i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-300i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-300i.woff2") format("woff2"),
 		url("rawline/rawline-300i.woff") format("woff"),
 		url("rawline/rawline-300i.ttf") format("truetype"),
@@ -76,7 +82,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-400.eot");
-	src: url("rawline/rawline-400.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-400.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-400.woff2") format("woff2"),
 		url("rawline/rawline-400.woff") format("woff"),
 		url("rawline/rawline-400.ttf") format("truetype"),
@@ -88,7 +95,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-400i.eot");
-	src: url("rawline/rawline-400i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-400i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-400i.woff2") format("woff2"),
 		url("rawline/rawline-400i.woff") format("woff"),
 		url("rawline/rawline-400i.ttf") format("truetype"),
@@ -100,7 +108,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-500.eot");
-	src: url("rawline/rawline-500.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-500.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-500.woff2") format("woff2"),
 		url("rawline/rawline-500.woff") format("woff"),
 		url("rawline/rawline-500.ttf") format("truetype"),
@@ -112,7 +121,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-500i.eot");
-	src: url("rawline/rawline-500i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-500i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-500i.woff2") format("woff2"),
 		url("rawline/rawline-500i.woff") format("woff"),
 		url("rawline/rawline-500i.ttf") format("truetype"),
@@ -124,7 +134,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-600.eot");
-	src: url("rawline/rawline-600.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-600.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-600.woff2") format("woff2"),
 		url("rawline/rawline-600.woff") format("woff"),
 		url("rawline/rawline-600.ttf") format("truetype"),
@@ -136,7 +147,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-600i.eot");
-	src: url("rawline/rawline-600i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-600i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-600i.woff2") format("woff2"),
 		url("rawline/rawline-600i.woff") format("woff"),
 		url("rawline/rawline-600i.ttf") format("truetype"),
@@ -148,7 +160,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-700.eot");
-	src: url("rawline/rawline-700.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-700.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-700.woff2") format("woff2"),
 		url("rawline/rawline-700.woff") format("woff"),
 		url("rawline/rawline-700.ttf") format("truetype"),
@@ -160,7 +173,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-700i.eot");
-	src: url("rawline/rawline-700i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-700i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-700i.woff2") format("woff2"),
 		url("rawline/rawline-700i.woff") format("woff"),
 		url("rawline/rawline-700i.ttf") format("truetype"),
@@ -172,7 +186,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-800.eot");
-	src: url("rawline/rawline-800.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-800.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-800.woff2") format("woff2"),
 		url("rawline/rawline-800.woff") format("woff"),
 		url("rawline/rawline-800.ttf") format("truetype"),
@@ -184,7 +199,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-800i.eot");
-	src: url("rawline/rawline-800i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-800i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-800i.woff2") format("woff2"),
 		url("rawline/rawline-800i.woff") format("woff"),
 		url("rawline/rawline-800i.ttf") format("truetype"),
@@ -196,7 +212,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-900.eot");
-	src: url("rawline/rawline-900.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-900.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-900.woff2") format("woff2"),
 		url("rawline/rawline-900.woff") format("woff"),
 		url("rawline/rawline-900.ttf") format("truetype"),
@@ -208,7 +225,8 @@
 @font-face {
 	font-family: "rawline";
 	src: url("rawline/rawline-900i.eot");
-	src: url("rawline/rawline-900i.eot?#iefix") format("embedded-opentype"),
+	src:
+		url("rawline/rawline-900i.eot?#iefix") format("embedded-opentype"),
 		url("rawline/rawline-900i.woff2") format("woff2"),
 		url("rawline/rawline-900i.woff") format("woff"),
 		url("rawline/rawline-900i.ttf") format("truetype"),
@@ -223,8 +241,9 @@
 	font-style: normal;
 	font-weight: 400;
 	src: url("trocchi/Trocchi-Regular.ttf") format("truetype");
-	unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
-		U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+	unicode-range:
+		U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
+		U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* Trocchi font - latin */
@@ -233,7 +252,8 @@
 	font-style: normal;
 	font-weight: 400;
 	src: url("trocchi/Trocchi-Regular.ttf") format("truetype");
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
-		U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	unicode-range:
+		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+		U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
+		U+2212, U+2215, U+FEFF, U+FFFD;
 }
