--- a/app/tailwind/admin_tailwind.css
+++ b/app/tailwind/admin_tailwind.css
@@ -6,7 +6,9 @@
 
 @import "tailwindcss";
 @plugin "daisyui" {
-	themes: light --default, corporate;
+	themes:
+		light --default,
+		corporate;
 }
 
 /* Source paths for content detection */
