fix: move maplibre-gl.css to public/ to bypass Sprockets
SassC cannot parse modern CSS syntax like (width <= 480px) used in
maplibre-gl.css. Moving it to public/vendor/ serves it directly
without any processing.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
-    <%= stylesheet_link_tag 'maplibre-gl', media: 'all', 'data-turbo-track': 'reload' %>
+    <link rel="stylesheet" href="/vendor/maplibre-gl.css" media="all" data-turbo-track="reload">
     <% if @site&.stylesheet_link %>
       <%= stylesheet_link_tag @site.stylesheet_link, media: 'all', 'data-turbo-track': 'reload' %>
     <% end %>
